assets script added; sprite script added; structure improved; etc...

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="phaser/phaser.js"></script>
+	<script src="lib/phaser/phaser.js"></script>
+	<script src="script/assets.js"></script>
+	<script src="script/sprite.js"></script>
 	<script src="script/script.js"></script>
 </head>
 
