--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="lib/phaser/phaser.js"></script>
+	<script src="script/helper.js"></script>
+	
 	<script src="script/assets.js"></script>
 	<script src="script/sprite.js"></script>
+	<script src="script/map.js"></script>
+	<script src="script/player.js"></script>
 	<script src="script/script.js"></script>
 </head>
 
