Add input script and move all input related code there

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<script src="script/helper.js"></script>
 	
 	<script src="script/assets.js"></script>
+	<script src="script/input.js"></script>
 	<script src="script/sprite.js"></script>
 	<script src="script/map.js"></script>
 	<script src="script/player.js"></script>
